complete login register and reset pwd
