# dbmodels/db.go
@@ -11,5 +11,14 @@ func GetDB() IDB {
 }
 
 type IDB interface {
+	IUsers
+}
 
+type IUsers interface {
+	InitCUsers() error
+	EmailExist(email string) (bool, error)
+	LoginNameExist(loginName string) (bool, error)
+	AddUser(user User) IDBError
+	GetUser(account, password string) (User, IDBError)
+	UpdatePassword(userId, oldPwd, newPwd string) IDBError
 }
